syntax = "proto3";

package calendar;
option go_package = "github.com/esivanov203/otus/hw12_13_14_15_calendar/proto;proto";

message Event {
  string id = 1;
  string title = 2;
  string description = 3;
  string user_id = 4;
  int64 date_start = 5;
  int64 date_end = 6;
}
